--- a/frontend/src/app/notes-view/components/note-view/note-view.component.less
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.less
@@ -7,6 +7,21 @@
   column-gap: 1rem;
   row-gap: 1rem;
 
+  .note-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .link-indicator-icon {
+      flex: 0 0 auto;
+      margin-right: 0.5rem
+    }
+
+    .input {
+      flex: 1 1 0;
+    }
+  }
+
   .note-title, .note-content {
     min-height: 1rem;
   }
