--- a/frontend/src/styles/icons.less
+++ b/frontend/src/styles/icons.less
@@ -2,8 +2,12 @@
 
 .icon {
   display: inline-block;
-  width: 1rem;
-  height: 1rem;
+  width: 100%;
+  height: 100%;
+  min-width: 1rem;
+  min-height: 1rem;
+  max-width: 1rem;
+  max-height: 1rem;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -45,5 +49,9 @@
 
   &.delete {
     background-image: url('/assets/icons/delete-24px.svg');
+  }
+
+  &.link {
+    background-image: url('/assets/icons/link-24px.svg');
   }
 }
