--- a/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.html
+++ b/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.html
@@ -1,2 +1,3 @@
 <i class="icon link link-indicator-icon" *ngIf="note.isLink"></i>
 <div class="note-title">{{note.title}}</div>
+<!-- <div class="note-id" style="font-size: 9px">({{note._id}})</div> -->
