--- a/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.less
+++ b/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.less
@@ -1,8 +1,15 @@
 .link-indicator-icon {
   display: inline-block;
-  margin-right: 0.5rem
+  margin-right: 0.5rem;
+  pointer-events: none;
 }
 
 .note-title {
   display: inline-block;
+  pointer-events: none;
+}
+
+.note-id {
+  display: inline-block;
+  pointer-events: none;
 }
