--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -1,9 +1,9 @@
-<app-widget widgetTitle="Notes view">
+<app-widget [widgetTitle]="note.title">
   <div class="note-view" *ngIf="note">
 
     <div class="note-title section-secondary">
       <i class="icon link link-indicator-icon" *ngIf="note.isLink"></i>
-      <div #noteTitle class="input" contenteditable [innerHTML]="note.title" (keydown)="supportTitleHotkeys($event)"></div>
+      <div #noteTitle class="input" contenteditable [innerHTML]="note.title | markHTMLsafe" (keydown)="supportTitleHotkeys($event)"></div>
     </div>
 
     <div class="note-variables section-secondary">
@@ -11,7 +11,7 @@
     </div>
 
     <div class="note-content section-secondary">
-      <pre #noteContent class="input" contenteditable [innerHTML]="note.content" (keydown)="supportContentHotkeys($event)"></pre>
+      <pre #noteContent class="input" contenteditable [innerHTML]="note.content | markHTMLsafe" (keydown)="supportContentHotkeys($event)"></pre>
     </div>
 
     <div class="note-actions section-secondary">
