--- a/frontend/src/app/browse/components/entries-list/entries-list.component.less
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.less
@@ -1,3 +1,4 @@
+@import '../../../../styles/colors.less';
 @import '../../../../styles/destyle-lists.less';
 
 @expand-icons-size: 1rem;
@@ -30,6 +31,7 @@
       border-width: 1px;
       background-color: transparent;
       border-color: transparent;
+      border-left-color: @action-secondary-border-color;
     }
   }
 
