notes moving and deleting now works based on notes controller

--- a/frontend/src/app/browse/components/browser/browser.component.html
+++ b/frontend/src/app/browse/components/browser/browser.component.html
@@ -1,7 +1,6 @@
 <app-entries-list
-style="overflow: auto"
-*ngIf="notes"
-[notes]="notes"
+*ngIf="notesIds"
+[notesIds]="notesIds"
 [browserReference]="browser.nativeElement"
 ></app-entries-list>
 <div
