--- a/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.html
+++ b/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.html
@@ -1,3 +1,5 @@
 <i class="icon link link-indicator-icon" *ngIf="note.isLink"></i>
-<div class="note-title">{{note.title}}</div>
-<!-- <div class="note-id" style="font-size: 9px">({{note._id}})</div> -->
+<div class="note-title">
+  {{sourceNote ? sourceNote.title : note.title}}
+  <div class="note-id" style="font-size: 9px">({{note._id}})</div>
+</div>
