--- a/frontend/src/app/widget/widget.component.less
+++ b/frontend/src/app/widget/widget.component.less
@@ -7,6 +7,7 @@
   padding: @widget-padding;
   position: relative;
   border-radius: 0.5rem;
+  margin-bottom: @widget-padding;
 
   .widget-title {
     @line-height: 1rem;
@@ -38,7 +39,7 @@
       border-width: @border-width;
       border-bottom: 0;
       border-radius: 0.5rem 0.5rem 0 0;
-      z-index: -1;
+      z-index: 0;
       padding: 0;
       margin: 0;
     }
@@ -51,6 +52,7 @@
       grid-area: icon;
       width: @elem-height / 2;
       height: @elem-height / 2;
+      z-index: 1;
     }
 
     & + .widget-content {
