notes title includes its path now

--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -1,4 +1,4 @@
-<app-widget *ngIf="note" [widgetTitle]="(sourceNote || note).title" [expandableId]="note._id">
+<app-widget *ngIf="note" [widgetTitle]="getNotePath()" [expandableId]="note._id">
   <div class="note-view" *ngIf="note">
 
     <div class="note-title section-secondary">
