--- a/frontend/src/styles/icons.less
+++ b/frontend/src/styles/icons.less
@@ -54,4 +54,8 @@
   &.link {
     background-image: url('/assets/icons/link-24px.svg');
   }
+
+  &.close {
+    background-image: url('/assets/icons/close-24px.svg');
+  }
 }
