--- a/frontend/src/app/widget/widget.component.less
+++ b/frontend/src/app/widget/widget.component.less
@@ -4,36 +4,37 @@
 @border-width: 0.125rem;
 
 .widget-wrapper {
+  @line-height: 1rem;
+  @title-height: @line-height + 2 * @widget-padding;
+
   padding: @widget-padding;
   position: relative;
   border-radius: 0.5rem;
-  margin-bottom: @widget-padding;
+  margin-bottom: @title-height / 1.75;
 
   .widget-title {
-    @line-height: 1rem;
-    @elem-height: @line-height + 2 * @widget-padding;
-  
     position: absolute;
     display: grid;
-    grid-template-columns: 1fr (@elem-height / 2);
+    grid-template-columns: 1fr (@title-height / 2) (@title-height / 2);
     column-gap: @widget-padding;
     grid-template-areas: "title icon";
     padding: @widget-padding / 2 calc(@widget-padding + 2px) 0 @widget-padding;
     line-height: @line-height;
-    top: -(@elem-height / 2);
+    top: -(@title-height / 2);
     left: 2 * @widget-padding;
     background-color: inherit;
     font-family: Philosopher;
     border-radius: 0.5rem 0.5rem 0 0;
     border-color: inherit;
+    width: calc(100% - 6*@widget-padding);
 
     &::before {
       content: '';
       position: absolute;
       top: -@border-width;
       left: -@border-width;
-      height: calc(@elem-height / 2 - @border-width);
-      width: calc(100%);
+      height: calc(@title-height / 2 - @border-width);
+      width: 100%;
       border-style: solid;
       border-color: inherit;
       border-width: @border-width;
@@ -46,19 +47,29 @@
 
     & > span {
       grid-area: title;
+
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 100%;
+      direction: rtl;
+      text-align: left;
     }
 
     & > ::ng-deep .icon {
       grid-area: icon;
-      width: @elem-height / 2;
-      height: @elem-height / 2;
+      width: @title-height / 2;
+      height: @title-height / 2;
+    }
+
+    & > * {
       z-index: 1;
     }
 
-    & + .widget-content {
+    & ~ .widget-content {
       display: none;
     }
-    &.expanded + .widget-content {
+    &.expanded ~ .widget-content {
       display: initial;
     }
   }
