title accepts tyles now

--- a/frontend/src/app/notes-view/components/layout/layout.component.html
+++ b/frontend/src/app/notes-view/components/layout/layout.component.html
@@ -1,5 +1,4 @@
-<div class="notes-layout">
-  <div class="tabs"></div>
+<div class="layout">
   <div class="content" *ngIf="controllerReady">
     <ng-container *ngFor="let noteId of openedNotesIds">
       <app-note-view
