note path in note view widget title utilizes HTML now

--- a/frontend/src/app/widget/widget.component.html
+++ b/frontend/src/app/widget/widget.component.html
@@ -5,7 +5,7 @@
   [expandableIconContainer]="widgetExpander"
   appExpandable
   >
-    <span>{{widgetTitle}}</span>
+    <span [innerHTML]="widgetTitle | markHTMLsafe"></span>
     <div #widgetExpander></div>
     <i class="action-button minor icon close" (click)="onClose()"></i>
   </div>
