--- a/frontend/src/app/widget/widget.component.less
+++ b/frontend/src/app/widget/widget.component.less
@@ -8,56 +8,44 @@
   @title-height: @line-height + 2 * @widget-padding;
 
   padding: @widget-padding;
-  position: relative;
+  // position: relative;
   border-radius: 0.5rem;
   margin-bottom: @title-height / 1.75;
 
   .widget-title {
-    position: absolute;
+    // position: absolute;
+    // top: -(@title-height / 2);
+    // left: 2 * @widget-padding;
     display: grid;
     grid-template-columns: 1fr (@title-height / 2) (@title-height / 2);
     column-gap: @widget-padding;
-    grid-template-areas: "title icon";
-    padding: @widget-padding / 2 calc(@widget-padding + 2px) 0 @widget-padding;
+    // padding: @widget-padding/2 calc(@widget-padding+2px) 0 @widget-padding;
+    padding: @widget-padding;
     line-height: @line-height;
-    top: -(@title-height / 2);
-    left: 2 * @widget-padding;
-    background-color: inherit;
+    // background-color: inherit;
     font-family: Philosopher;
-    border-radius: 0.5rem 0.5rem 0 0;
-    border-color: inherit;
-    width: calc(100% - 6*@widget-padding);
+    // border-radius: 0.5rem 0.5rem 0 0;
+    // border-color: inherit;
+    width: calc(100% - 2 * @widget-padding);
 
-    &::before {
-      content: '';
-      position: absolute;
-      top: -@border-width;
-      left: -@border-width;
-      height: calc(@title-height / 2 - @border-width);
-      width: 100%;
-      border-style: solid;
-      border-color: inherit;
-      border-width: @border-width;
-      border-bottom: 0;
-      border-radius: 0.5rem 0.5rem 0 0;
-      z-index: 0;
-      padding: 0;
-      margin: 0;
-    }
-
-    & > span {
-      grid-area: title;
-
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      width: 100%;
-      direction: rtl;
-      text-align: left;
-    }
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   top: -@border-width;
+    //   left: -@border-width;
+    //   height: calc(@title-height / 2 - @border-width);
+    //   width: 100%;
+    //   border-style: solid;
+    //   border-color: inherit;
+    //   border-width: @border-width;
+    //   border-bottom: 0;
+    //   border-radius: 0.5rem 0.5rem 0 0;
+    //   z-index: 0;
+    //   padding: 0;
+    //   margin: 0;
+    // }
 
     & > ::ng-deep .icon {
-      grid-area: icon;
       width: @title-height / 2;
       height: @title-height / 2;
     }
@@ -69,8 +57,22 @@
     & ~ .widget-content {
       display: none;
     }
-    &.expanded ~ .widget-content {
-      display: initial;
+
+    &.expanded {
+      margin-bottom: 1rem;
+
+      & ~ .widget-content {
+        display: initial;
+      }
+    }
+
+    & > .widget-title-text-container {
+      overflow: hidden;
+
+      & > .widget-title-text {
+        display: block;
+        margin: 0 @widget-padding 0 0;
+      }
     }
   }
 }
