--- a/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.html
+++ b/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.html
@@ -1,5 +1,5 @@
 <i class="icon link link-indicator-icon" *ngIf="note.isLink"></i>
 <div class="note-title">
-  <span [innerHTML]="(sourceNote || note).title | markHTMLsafe"></span>
+  <div [innerHTML]="(sourceNote || note).title | markHTMLsafe"></div>
   <div class="note-id" style="font-size: 9px">({{note._id}})</div>
 </div>
