--- a/frontend/src/app/browse/components/browser/browser.component.less
+++ b/frontend/src/app/browse/components/browser/browser.component.less
@@ -2,7 +2,6 @@
 
 app-entries-list {
   display: block;
-  overflow: auto;
 }
 
 .top-drop {
@@ -17,24 +16,35 @@ app-entries-list {
     display: flex;
   }
 
-  &:not(.drag-mode-reorder) {
-    .top-drop.indicate-drop-zone {
-      opacity: 1;
-    }
+  .top-drop.indicate-drop-zone {
+    opacity: 1;
+  }
 
-    & ::ng-deep .note-title.category {
-      &.drop-zone {
-        &.indicate-drop-zone {
-          border-color: @action-secondary-border-color;
-        }
+  & ::ng-deep .note-title.category {
+    &.drop-zone {
+      &.indicate-drop-zone {
+        border-color: @action-secondary-border-color;
       }
     }
+  }
 
-    & ::ng-deep .note-title:not(.category) {
-      &.drop-zone {
-        &.indicate-drop-zone {
-          margin-left: 0.125rem;
-          margin-right: -0.125rem;
+  & ::ng-deep .note-title:not(.category) {
+    &.drop-zone {
+      &.indicate-drop-zone {
+        margin-left: 0.125rem;
+        margin-right: -0.125rem;
+      }
+    }
+  }
+
+  & ::ng-deep .drop-between {
+    &.drop-zone {
+      @border-width: 2px;
+      @marker-height: 0.5rem;
+
+      &.indicate-drop-zone {
+        &::before, &::after {
+          display: block;
         }
       }
     }
@@ -47,42 +57,6 @@ app-entries-list {
 
 :host.drag-mode-move ::ng-deep * {
   cursor: move;
-}
-
-:host.drag-mode-reorder {
-  & ::ng-deep .indicate-drop-zone {
-    @border-width: 2px;
-    @marker-height: 0.5rem;
-
-    position: relative;
-
-    &::before, &::after {
-      position: absolute;
-      content: '';
-      border-color: @action-secondary-border-color;
-      border-radius: inherit;
-      height: @marker-height / 2;
-      z-index: 1;
-      pointer-events: none;
-      border-style: solid;
-      left: calc(-@marker-height / 2 - 2px);
-      right: calc(-@marker-height / 2 - 2px);
-    }
-
-    &::before {
-      bottom: calc(-@marker-height / 2 - @border-width);
-      border-width: 0 @border-width@border-width @border-width;
-    }
-
-    &::after {
-      bottom: calc(-@marker-height - @border-width);
-      border-width: @border-width @border-width 0 @border-width;
-    }
-  }
-
-  & ::ng-deep * {
-    cursor: wait;
-  }
 }
 
 :host.drag-mode-link ::ng-deep * {
