--- a/frontend/src/app/widget/widget.component.html
+++ b/frontend/src/app/widget/widget.component.html
@@ -2,7 +2,7 @@
   <div
   class="widget-title section-secondary expanded"
   [expandableItemId]="(expandableId || widgetTitle) + '_widget'"
-  [expandableIconContainer]="widgetExpander"
+  [expanderContainer]="widgetExpander"
   appExpandable
   >
     <div class="widget-title-text-container">
