--- a/frontend/src/styles/icons.less
+++ b/frontend/src/styles/icons.less
@@ -14,7 +14,7 @@
 
   &.text-bottom {
     width: auto;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     padding: 2rem 0 0 0;
     border: 0;
