--- a/frontend/src/styles/styles.less
+++ b/frontend/src/styles/styles.less
@@ -68,3 +68,20 @@ p {
 .hidden {
   display: none;
 }
+
+
+.drag-mode-copy {
+  cursor: copy;
+}
+
+.drag-mode-move {
+  cursor: move;
+}
+
+.drag-mode-link {
+  cursor: alias;
+}
+
+.drag-mode-cant-drop {
+  cursor: no-drop;
+}
