WIP: browser and note-views are now draggable and snap to grid

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,4 @@
-
 <div class="layout">
   <app-header class="header"></app-header>
-
-  <app-widget widgetTitle="Browser" class="browser">
-    <app-browser></app-browser>
-  </app-widget>
-
-  <app-layout>
-  </app-layout>
-
+  <app-layout class="content"></app-layout>
 </div>
