--- a/frontend/src/app/browse/components/browser/browser.component.less
+++ b/frontend/src/app/browse/components/browser/browser.component.less
@@ -2,9 +2,12 @@
 
 app-entries-list {
   display: block;
+  height: calc(100% - 2rem);
+  margin-bottom: 0.5rem;
 }
 
 .top-drop {
+  height: 1.5rem;
   user-select: none;
   font-style: italic;
   display: none;
