--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -25,6 +25,7 @@
           'category': getContentSourceNote(note)?.isCategory
         }"
         appDraggable
+        [useShadowClone]="true"
         appDropZone
         [targetNoteId]="note._id"
         ></app-draggable-note-entry>
