--- a/frontend/src/app/app.component.less
+++ b/frontend/src/app/app.component.less
@@ -1,11 +1,14 @@
 .layout {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  grid-template-columns: 20rem 1fr;
-  column-gap: 2rem;
-}
+  width: 100%;
+  height: 100%;
 
-.header {
-  margin-bottom: 2rem;
-  grid-column: e('1 / 3');
+  .header {
+    display: block;
+    margin-bottom: 2rem;
+    height: 5rem;
+  }
+
+  .content {
+    display: block;
+  }
 }
